# taskflow-ox-demo

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: main.py
app/db/: connection.py  queries.py
app/models/: task.py  user.py
app/routes/: auth.py  tasks.py  users.py
app/services/: email_service.py  task_service.py  user_service.py
tests/: test_auth.py  test_tasks.py
