[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "taskflow"
version         = "0.1.0"
description     = "Simple task management API — ox demo application"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
select      = ["E", "F"]
